testdata/fixtures/audit/positive/cors_wildcard_extra_opts_js.js
const cors = require("cors");

const corsOptions = cors({
  credentials: true,
  origin: "*",
  methods: ["GET", "POST"],
});

module.exports = corsOptions;
