testdata/fixtures/audit/negative/cors_wildcard_neg_specific_origin_js.js
const express = require("express");
const cors = require("cors");

const app = express();
app.use(cors({ origin: "https://app.example.com" }));

module.exports = app;
